# Ghost-Medic

./: .gitignore  ARCHITECTURE.md  App.js  CLAUDE.md  DATA_FORMAT.md  README.md  ROADMAP.md  app.json  babel.config.js  package-lock.json  package.json  repomix-output.xml  tsconfig.json
app/: _layout.tsx  action.tsx  evacuation.tsx  handoff.tsx  index.tsx  mist.tsx  triage.tsx  vitals.tsx
bridge/: .gitignore  README.md  bridge.js  package-lock.json  package.json  sample.ndjson  test-client.js
docs/: WEBSITE_STRATEGY.md
docs/session-reports/: 2026-07-21-expo-web-export-derisk.md  (+1 more)
firmware/: .gitignore  CMakeLists.txt  README.md  bmp280.c  bmp280.h  bmp280_compensation.c  bmp280_compensation.h  fall_detection.c  fall_detection.h  ghost_medic_firmware.uf2  i2c_helpers.h  lis3dh.c  lis3dh.h  main.c  max30102.c  max30102.h
firmware/tests/: Makefile  README.md  test_bmp280.c  test_fall.c
hardware/: .gitignore  README.md  ghostmedic-sensor-hub.kicad_pcb  ghostmedic-sensor-hub.kicad_pro  ghostmedic-sensor-hub.kicad_sch
legacy/: README.md
services/: biosensorService.ts  bridgeConfig.example.ts  fallTrigger.ts  llmConfig.example.ts  llmConfig.ts  llmService.ts  sensorContext.ts  transcriptionService.ts  useWristVitals.ts  visionService.ts  wristVitalsParser.ts
simulator/: README.md  index.html
site/: README.md  about.html  hardware.html  how-it-works.html  index.html  proof.html  style.css
site/assets/: app-demo.js  (+3 more)
tests/: README.md  fallTrigger.test.mjs  sensorContext.test.mjs  wristVitalsParser.test.mjs
training/: README.md  eval.ts  generateDataset.ts
(+45 files in other folders)
